<?xml version="1.0"?>
<package format="2">
  <name>geoviz_project</name>
  <version>0.0.0</version>
  <description>The geoviz_project package</description>

  <maintainer email="adityand@cmu.edu">Aditya Dhawale</maintainer>


  <license>TODO</license>


    <buildtool_depend>catkin</buildtool_depend>
		<depend>std_msgs</depend>
		<depend>roscpp</depend>
		<depend>message_filters</depend>
		<depend>cv_bridge</depend>
		<depend>image_transport</depend>
		<depend>sensor_msgs</depend>
		<depend>nav_msgs</depend>
		<depend>pcl_ros</depend>
		<depend>rosbag</depend>
		<depend>cpp_utils</depend>
		<depend>aditya_utils</depend>
		<depend>tf</depend>
		<depend>gmm_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
